--- a/journal/202108.md
+++ b/journal/202108.md
@@ -7,7 +7,7 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 { intro, major news of the month, don't put any links here
 
 - Politeia v1.1.0 release
-- again solid dev progress in multiple projects
+- again solid dev progress in multiple projects (still thinking which to highlight and how)
 - new on-chain ATHs
 
 }
@@ -67,9 +67,8 @@ Other merged work:
 **[Decrediton](https://github.com/decred/decrediton)**
 
 - added a button to [revoke](https://github.com/decred/decrediton/pull/3506) tickets while in SPV mode
-- replaced the gap limit setting with one-shot [Discover Address Usage](https://github.com/decred/decrediton/pull/3532) action with its own gap limit
-- new UI design for [LN Send](https://github.com/decred/decrediton/pull/3538) page
-- new UI design for [LN Receive](https://github.com/decred/decrediton/pull/3537) page
+- replaced the gap limit setting with one-shot [Discover Address Usage](https://github.com/decred/decrediton/pull/3532) action (that has its own gap limit)
+- new UI design for [LN Send](https://github.com/decred/decrediton/pull/3538) and [LN Receive](https://github.com/decred/decrediton/pull/3537) pages
 
 { UI shot candidates: 3537..3538 }
 
@@ -79,7 +78,7 @@ Other merged work:
 
 Politeia v1.1.0 has been released and deployed at [proposals.decred.org](https://proposals.decred.org/). Release highlights:
 
-- proposal authors are now required to fill funding amount, start and end dates, and the domain when submitting proposals (recent proposals like [this](https://proposals.decred.org/record/58d9f46) show this new data at the top)
+- proposal authors are now required to fill funding amount, start and end dates, and domain, when submitting proposals (recent proposals like [this](https://proposals.decred.org/record/58d9f46) show this new data at the top)
 - [combined](https://github.com/decred/politeiagui/pull/2431) `In Discussion` and `Voting` tabs into one `Under Review` tab to help users quickly see if any proposals are being voted on
 - ability to see raw Markdown
 - ability to see who censored the proposal and why
@@ -97,13 +96,13 @@ User-facing changes merged in master (post v1.1.0):
 
 { UI shot candidates: 2524 }
 
-Backend, internal, and command-line changes:
+Backend, internal, and command-line changes (post v1.1.0):
 
 - verify [password](https://github.com/decred/politeia/pull/1490) before expensive wallet operations in `politeiavoter vote` command
 - human-readable [currency](https://github.com/decred/politeia/pull/1488) values in `pictl` tool output (e.g. when submitting new proposals with it)
 - added CSRF protection to the [login](https://github.com/decred/politeia/pull/1481) route
 - added [billing statuses](https://github.com/decred/politeia/pull/1480) (Active, Closed, Completed) to mark whether an approved proposal can or cannot be billed against
-- require the [extra data](https://github.com/decred/politeia/pull/1487) fields to be signed when posting or editing comments, and only allow that data if configured in the comments plugin (the purpose of these fields is to extend the comments plugin with new functionality)
+- require the [extra data](https://github.com/decred/politeia/pull/1487) fields to be signed when posting or editing comments, and only allow that data if configured in the `comments` plugin (the purpose of these fields is to extend the `comments` plugin with new functionality)
 - allow proposal authors to post [updates](https://github.com/decred/politeia/pull/1491) on approved proposals. Each update starts a new comment thread where users can reply and vote, until an admin marks the proposal as either Completed or Closed.
 - increased test coverage
 
@@ -171,7 +170,7 @@ Merged in dcrandroid:
 - added transaction [details](https://github.com/planetdecred/dcrandroid/pull/573) dialog for tickets
 - updated [French](https://github.com/planetdecred/dcrandroid/pull/576) translation
 - [upgraded](https://github.com/planetdecred/dcrandroid/pull/571) dependencies and migrated to Kotlin code style
-- fixed "StrandHogg" [vulnerability](https://github.com/planetdecred/dcrandroid/pull/581) (malicious apps may hijack Android Tasks)
+- fixed "StrandHogg" [vulnerability](https://github.com/planetdecred/dcrandroid/pull/581) (one where malicious apps may hijack Android Tasks)
 
 { UI shot candidates: 572..575,577(receive!) }
 
@@ -187,14 +186,14 @@ Merged in dcrandroid:
 **[godcr](https://github.com/planetdecred/godcr)**
 
 - implemented [Politeia](https://github.com/planetdecred/godcr/pull/542) voting
-- more informative display of [transactions](https://github.com/planetdecred/godcr/pull/582) lists and details
+- more informative display of [transaction](https://github.com/planetdecred/godcr/pull/582) lists and details
 - added desktop [notifications](https://github.com/planetdecred/godcr/pull/518) when a new incoming transaction or proposal is detected
 - new system for in-app (toast) and operating system [notifications](https://github.com/planetdecred/godcr/pull/540)
 - show time till next [ticket price](https://github.com/planetdecred/godcr/pull/565) change
 - customized notifications for [stake](https://github.com/planetdecred/godcr/pull/560) tx
 - implemented [back](https://github.com/planetdecred/godcr/pull/557) navigation
 - added [hover](https://github.com/planetdecred/godcr/pull/488) tooltips for ticket data
-- added [LinearLayout](https://github.com/planetdecred/godcr/pull/563) to simplify layout code
+- introduced [LinearLayout](https://github.com/planetdecred/godcr/pull/563) to simplify layout code
 - refactoring and code cleanup
 - ~20 bug fixes
 
@@ -209,7 +208,7 @@ Merged in dcrandroid:
 
 Other:
 
-- Bug Bounty Program posted an [update](https://bounty.decred.org/2021/08/status-update/): two vulnerabilities have been patched and made public, their authors added to the Hall of Fame.
+- Bug Bounty Program posted an [update](https://bounty.decred.org/2021/08/status-update/): 2 vulnerabilities have been patched and made public, and their authors added to the [Hall of Fame](https://bounty.decred.org/#hall_of_fame).
 
 
 ## People
@@ -257,7 +256,7 @@ See Politeia Digest [issue 46](https://blockcommons.red/politeia-digest/issue046
 
 **Hashrate**: August's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=krrqjgnz-kt1oo9gz&scale=linear&bin=block&axis=time) opened at ~316 Ph/s and closed ~360 Ph/s, bottoming at 164 Ph/s and peaking at 413 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Sep 1: Poolin 36%, F2Pool 29%, AntPool 16%, BTC.com 8%, Easy2Mine 5%, Luxor 3%, ViaBTC 1.6%, HuobiPool 1.3%, OKEx 0.14%, CoinMine 0.08%, UUPool 0.07%. The percentages are based on the 244 Ph/s attributed to known pools and do not include ~90 Ph/s from unknown miners. Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before Sep 1 mostly confirmed these numbers.
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Sep 1: Poolin 36%, F2Pool 29%, AntPool 16%, BTC.com 8%, Easy2Mine 5%, Luxor 3%, ViaBTC 1.6%, HuobiPool 1.3%, OKEx 0.14%, CoinMine 0.08%, UUPool 0.07%. These percentages are based on the 244 Ph/s attributed to known pools and do not include ~90 Ph/s from unknown miners. Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before Sep 1 mostly confirmed these numbers.
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=krrqjgnz-kt1oo9gz&axis=time&visibility=true-true&mode=stepped) varied between 120.1-321.6 DCR, with 30-day [average](https://dcrstats.com/) at 193.8 DCR (+3.1).
 
@@ -271,23 +270,23 @@ The ticket price [went down](https://www.reddit.com/r/decred/comments/p4drzc/wha
 
 Node versions as of Sep 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (252 dcrd nodes): v1.6.2 - 56%, v1.6.0 - 14%, v1.6.1 - 12%, v1.7 dev builds - 13%, v1.6 dev builds - 2.4%, v1.5.2 - 2%, v1.5.1 - 0.4%.
 
-The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jyefppu5-kub1inpe&bin=day&axis=time&visibility=true-true-true) varied between 46.1-50.5% and made a [new ATH](https://twitter.com/lukebp_/status/1427980967789187076). Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom=krmqf4vr-kt3wbm67&bin=day&axis=time) varied between 200-786K DCR and also set a new record.
+The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jyefppu5-kub1inpe&bin=day&axis=time&visibility=true-true-true) varied between 46.1-50.5% and crossed the 50% [milestone](https://twitter.com/lukebp_/status/1427980967789187076). Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom=krmqf4vr-kt3wbm67&bin=day&axis=time) varied between 200-786K DCR and also set a new record.
 
-Many new ATHs have been nicely summarized in @bochinchero's latest on-chain metrics [thread](https://twitter.com/TheBochinchero/status/1433834350353784875).
+Many new all-time highs have been nicely summarized in @bochinchero's latest on-chain metrics [recap](https://twitter.com/TheBochinchero/status/1433834350353784875).
 
 
 ## Ecosystem
 
-Welcome the [new](https://github.com/decred/dcrwebapi/pull/147) VSP at [synergy-crypto.net](https://vspd.synergy-crypto.net/) with 0.75% fee. Extra thanks for running a [testnet](https://vspd-testnet.synergy-crypto.net/) instance.
+Welcome the [new](https://github.com/decred/dcrwebapi/pull/147) VSP at [synergy-crypto.net](https://vspd.synergy-crypto.net/) with 0.75% fee (and extra thanks for running a [testnet](https://vspd-testnet.synergy-crypto.net/) instance).
 
 The following legacy VSP have been removed from public [listing](https://decred.org/vsp/):
 
 - [dcr.farm](https://dcr.farm) - its legacy page has been redirecting to [vspd](https://vsp.dcr.farm/) since June (when it [had](https://github.com/decred/dcrwebapi/issues/146#issuecomment-865451784) 32 live tickets)
 - [stakey.net](https://stakey.net) - the page has been replaced with vspd UI, but its [legacy API](https://stakey.net/api/v2/stats) is still up and reports how many live tickets remain (38 as of Sep 1)
 
-raqamiya.net has shut down its legacy VSP. Closing procedure started in March when it was [delisted](https://github.com/decred/dcrwebapi/pull/132) and users were notified via email, website, and [March DJ](202103.md#integrations) to not buy any new tickets. Raqamiya then continued to vote tickets for ~4 months before closing on Aug 16. A few users missed all notices and kept assigning tickets to this VSP until the end, resulting in 11 live tickets at the moment of shutdown. This can happen with any legacy VSP because [dcrstakepool](https://github.com/decred/dcrstakepool) has no way to reject ticket registrations (unlike the new vspd protocol).
+raqamiya.net has shut down its legacy VSP. Closing procedure started in March when it was [delisted](https://github.com/decred/dcrwebapi/pull/132) and users were notified via email, website, and [March DJ](202103.md#integrations) to not buy any new tickets. Raqamiya then continued to vote existing tickets for ~4 months before closing on Aug 16. A few users missed all notices and kept assigning tickets to this VSP until the end, resulting in 11 live tickets at the moment of shutdown. This can happen with any legacy VSP because [dcrstakepool](https://github.com/decred/dcrstakepool) has no way to reject ticket registrations (unlike the new vspd protocol).
 
-For anyone still using legacy VSP it is recommended to switch to vspd providers to avoid the risk of missed tickets, e.g. as a result of shutting down or if dcrstakepool stops working with the upcoming consensus upgrades. As of Sep 1, legacy VSPs managed less than 300 tickets, or 0.7% of the ticket pool.
+For anyone still using legacy VSP it is recommended to switch to [vspd providers](https://decred.org/vsp/) to avoid the risk of missed tickets, e.g. as a result of shutting down or if dcrstakepool stops working with the upcoming consensus upgrades. As of Sep 1, legacy VSPs managed less than 300 tickets, or 0.7% of the ticket pool.
 
 New exchange integrations:
 
@@ -308,14 +307,14 @@ Monde PR had a scaled back month after its second [proposal](https://proposals.d
 
 ## Events
 
-Decred became a supporter of an educational program about crypto and blockchain tech organized by the Business School of the Catholic University of Argentina and Bitcoin Argentina NGO. Decred was [invited](https://matrix.to/#/!clHjlICBEtCtAdTupf:decred.org/$-CkRPUnXB8spWofBTk3nA3UAr2u4ofpCIzaoCJuoUag) as a result of past connections between Bitcoin Argentina and the [Spanish](https://twitter.com/Decred_ES) outreach team, and will be included in marketing materials (along other brands). The [workshop](http://uca.edu.ar/es/blockchain-y-criptoactivos) starts on Sep 8 and will run for 10 weeks.
+Decred became a supporter of an educational program about crypto and blockchain tech organized by the Business School of the Catholic University of Argentina and Bitcoin Argentina NGO. Decred was [invited](https://matrix.to/#/!clHjlICBEtCtAdTupf:decred.org/$-CkRPUnXB8spWofBTk3nA3UAr2u4ofpCIzaoCJuoUag) as a result of past connections between Bitcoin Argentina and our [Spanish](https://twitter.com/Decred_ES) outreach team, and will be included in marketing materials (along other brands). The [workshop](http://uca.edu.ar/es/blockchain-y-criptoactivos) starts on Sep 8 and will run for 10 weeks.
 
 
 ## Media
 
 Selected articles:
 
-- The Suppressor part 1: War of attrition ([medium](https://medium.com/@tacorevenge/the-suppressor-part-1-war-of-attrition-3081a61b202b))
+- The Suppressor part 1: War of attrition by @tacorevenge ([medium](https://medium.com/@tacorevenge/the-suppressor-part-1-war-of-attrition-3081a61b202b))
 - The future is now: Steven Wagner of Raedah Group on how their technological innovation will shake up the tech scene by Fotis Georgiadis ([medium](https://medium.com/authority-magazine/the-future-is-now-steven-wagner-of-raedah-group-on-how-their-technological-innovation-will-shake-4f272ced222f))
 - One of the most profitable cryptos to mine is one you may have never heard of, and it's up 1,300% from its 2020 low. Mining-farm CEO Josh Metnick explains the crypto, and which miners and pools to use. by Laila Maidan ([businessinsider.com](https://www.businessinsider.com/profitable-crypto-to-mine-according-to-ceo-mining-farm-navier-2021-8), paywalled ([kind of](https://twitter.com/exitusdcr/status/1429414135582937088)))
 
@@ -329,11 +328,11 @@ Videos:
 - Decred's ticket voting system - Decred Fundamentals by @phoenixgreen ([youtube](https://www.youtube.com/watch?v=LEO0vHdY3gs))
 - Tax education and Decred by @phoenixgreen ([youtube](https://www.youtube.com/watch?v=-26obfV2e84))
 - Decred is heating up for something big by @phoenixgreen ([youtube](https://www.youtube.com/watch?v=n6ATfW_vnCg))
-- Decred Price Analysis - 4th August 2021 by @Brave New Coin ([youtube](https://www.youtube.com/watch?v=NOlvAI43VSY))
+- Decred Price Analysis - 4th August 2021 by Brave New Coin ([youtube](https://www.youtube.com/watch?v=NOlvAI43VSY))
 
-Decred was mentioned by Chris Burniske in the "Original Sins of Crypto" [video](https://www.youtube.com/watch?v=gLbzfZKf_ro&t=1h05m42s) by Jason Yanowitz of Blockworks:
+Decred was mentioned by Chris Burniske in July's [Original Sins of Crypto](https://www.youtube.com/watch?v=gLbzfZKf_ro&t=1h05m42s) interview with Jason Yanowitz of Blockworks:
 
-> Jason: How do you trust though... Like, everyone is democratic, until they get power and then power corrupts. I love the concept of a DAO and I love the concept of DeFi but my biggest concern is are we just trusting these "DeFi DAO CEOs" that they'll decentralize and give away power?
+> Jason: How do you trust though... Like, everyone is democratic, until they get power and then power corrupts. I love the concept of a DAO and I love the concept of DeFi but my biggest concern is, are we just trusting these "DeFi DAO CEOs" that they'll decentralize and give away power?
 > 
 > Chris: It really depends on the genesis of the DAO. Not all DAOs are equal. This is where for me the gold standard of how a DAO was started is still Decred.
 
@@ -341,7 +340,7 @@ Translations:
 
 - Decred Journal July 2021 was [translated](https://xaur.github.io/decred-news/) to Arabic (@arij, @abdulrahman4), Chinese (@Dominic), and Spanish (@francov\_). Thank you to all translators for spreading the word!
 
-If you have translations we don't know about please share in our [#translations](https://chat.decred.org/#/room/#translations:decred.org) chat.
+Share your translations in our [#translations](https://chat.decred.org/#/room/#translations:decred.org) chat room.
 
 
 ## Markets
