--- a/journal/202109.md
+++ b/journal/202109.md
@@ -4,7 +4,11 @@
 
 _Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
 
-{ intro, major news of the month, don't put any links here }
+{ intro, major news of the month, don't put any links here
+
+- development work on 2 consensus changes completed
+
+}
 
 Contents: { sync }
 
@@ -31,7 +35,31 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 **[dcrd](https://github.com/decred/dcrd)**
 
+Explicit Version Upgrades consensus change ([DCP-8](https://github.com/decred/dcps/blob/master/dcp-0008/dcp-0008.mediawiki)):
+
+- new consensus rules have been [implemented](https://github.com/decred/dcrd/pull/2716). Once activated, unknown transaction and script versions will be rejected until they have explicitly been enabled by another consensus change. Coins that were spendable before activation will remain spendable. This change will provide greater network security and allow developers to write more bug-proof code, as mentioned in [proposal](https://proposals.decred.org/record/3a98861) comments, [DCP-8](https://github.com/decred/dcps/blob/master/dcp-0008/dcp-0008.mediawiki), or a recent dev [discussion](https://github.com/decred/dcrd/pull/2719#issuecomment-909535320).
+- @davecgh posted a [proposal update](https://proposals.decred.org/record/3a98861/comments/21) that all development work is complete
+
+Automatic Ticket Revocations consensus change ([DCP-9](https://github.com/decred/dcps/blob/master/dcp-0009/dcp-0009.mediawiki)):
+
+- [preparations](https://github.com/decred/dcrd/pull/2718): added tests, added agenda definitions, reorganized code to fit upcoming changes. A new transaction priority was introduced to ensure automatic revocations are always created. Full list of priorities becomes: votes (highest) > automatic revocations > tickets > regular transactions and revocations (lowest).
+- [implemented](https://github.com/decred/dcrd/pull/2720) the actual consensus change. Once activated, it will allow tickets to be revoked by anyone, and blocks will be required to contain revocations for all tickets that become missed or expired as of that block.
+- @rstaudt2 posted a [proposal update](https://proposals.decred.org/record/e2d7b7d/comments/19) that the Decred Change Proposal and code changes have been completed
+
+Other merged work:
+
+- implemented spend journal [pruning](https://github.com/decred/dcrd/pull/2641) that delays removal of spend journal entries until they are no longer used (this is needed for [asynchronous indexing](https://github.com/decred/dcrd/issues/1470) that will speed up block validation) { is description and motivation correct? }
+- added more tests for address manager and [decoupled](https://github.com/decred/dcrd/pull/2596) it from `wire` package, in preparation for upcoming changes in the wire protocol
+- pinned [Docker](https://github.com/decred/dcrd/pull/2735) images and GitHub [Actions](https://github.com/decred/dcrd/pull/2736) with hashes instead of tags for better supply chain security
+- reworked [Docker](https://github.com/decred/dcrd/pull/2740) support to provide an image with a strong focus on security: runs as a non-root user and only includes Decred-specific binaries ("distroless"). The new final image is around 10 MB.
+- code upgraded to use [Go 1.16](https://github.com/decred/dcrd/pull/2722) features
+- updated module [hierarchy](https://github.com/decred/dcrd/pull/2744) graph
+
+{ Maybe:
+
 - https://matrix.to/#/!qYpAAClAYrHaUIGkLs:decred.org/$gEk4clvm_x6Nr6fzFaQCYp4iBSTozoJ8C5XV61JB2BQ
+
+}
 
 <a id="dcrwallet" />
 
